[package]
name = "gdf_testing"
description = "CLI utility for testing of DialogFlow NLP powered chatbots"
version = "0.1.0"
authors = ["abezecny"]
edition = "2018"
default-run = "gdf_testing"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
serde_json = "=1.0.44"
jmespath = "^0.2.0"
assert-json-diff = "1.0.3"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
guid-create = "0.1.1"
indicatif = "0.14.0"
prettytable-rs = "^0.8"
ansi_term = "0.12"
ctrlc = "3.1.4"
log = "0.4.0"
env_logger = "0.7.1"
clap = "2.33.0"